--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>kun.uz</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-    </body>
-    </html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>kun.uz</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="col.css">
+</head>
+
+<body>
+
+    <div class="container">
+        <div class="rek col-12">
+            <img src="https://avatars.mds.yandex.net/get-adfox-content/2788782/211109_adfox_1744084_4773165.09e6699fa0acf615421711b1502e19c5.jpg/optimize.webp"
+                alt="reklama">
+        </div>
+        <div class="row">
+            <!-- start header -->
+            <header class="col-12">
+                <div class="row">
+                    <div class="col-1">
+                        <div class="logo">
+                            <img src="https://kun.uz/assets/cd6ab492/img/kun-uz-logo.svg" alt="kun.uz">
+                        </div>
+                    </div>
+
+                    <div class="col-8">
+                        <div class="navbar">
+                            <nav>
+                                <ul>
+
+                                    <li class="nav item"><a href="#">O‘ZBEKISTON</a> </li>
+                                    <li class="nav item"><a href="#">JAHON</a> </li>
+                                    <li class="nav item"><a href="#">IQTISODIYOT</a> </li>
+                                    <li class="nav item"><a href="#">JAMIYAT</a> </li>
+                                    <li class="nav item"><a href="#">FAN-TEXNIKA</a> </li>
+                                    <li class="nav item"><a href="#">SPORT</a> </li>
+                                    <li class="nav item"><a href="#">BUSINESS CLASS</a> </li>
+                                    <li class="nav item"><a href="#">AUDIO</a> </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <div class="cart-login-search">
+                            <ul>
+                                <li><a href="#" class="covid-btn">Koronavirus</a></li>
+                                <li><a href="#"><img src="https://kun.uz/assets/2ed6cdd/img/search-btn.svg" alt="search"></a></li>
+                                <li><a href="#"><img src="https://kun.uz/assets/2ed6cdd/img/profile-icon.svg" alt="user"></a></li>
+                                <li><a href="#" class="lang-wrapper">O'zbek</a></li>
+                              </ul>
+
+                        </div>
+
+                    </div>
+                </div>
+
+            </header>
+
+
+            <!-- end header -->
+
+        </div>
+    </div>
+
+</body>
+
+</html>
